mise à jour - intégration vidéo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h2>Profil</h2>
 
   <p style="font-size: 1.1rem; line-height: 1.6;">
-  👋 Salut, moi c’est <strong>Baptiste</strong> — passionné par la <strong>donnée</strong>, les <strong>tableaux de bord</strong> et tout ce qui permet de mieux comprendre le monde à travers l’analyse. 
+  👋 Salut, moi c’est <strong>Baptiste</strong> — passionné par la <strong>donnée</strong>, les <strong>tableaux de bord</strong> et tout ce qui permet de mieux comprendre le monde à travers l'étude des données. 
   J’aime structurer, décortiquer, visualiser pour rendre les choses plus claires et efficaces. 
   Sportif dans l’âme (montagne, natation, escalade 🧗‍♂️), je retrouve dans la data le même goût de l’effort, de la rigueur et du dépassement. 
   Curieux, autonome et toujours à la recherche de nouvelles compétences, j’ai à cœur de transmettre ce que j’apprends et de produire un travail de qualité.
@@ -332,14 +332,16 @@
   <p>
     Cette vidéo présente une formation complète à l’outil Power BI, que je maîtrise parfaitement.  
     Elle illustre également ma capacité à former efficacement des utilisateurs sur cet outil.  
-    La vidéo proposée ici est une version ultra compressée pour faciliter la diffusion,  
-    mais la version haute qualité, découpée en plusieurs parties, est disponible sur mon GitHub.
+    La vidéo proposée ici est une vidéo youtube mais vous pouvez retrouver cette vidéo en plusieurs parties sur mon github ou en format ultra compressé.
   </p>
   <div style="text-align: center; margin-top: 1rem;">
-    <video controls style="max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 8px;">
-      <source src="8. Formation sur l'outil Power BI/Formation Power BI entier - ultra compressé.mp4" type="video/mp4">
-      Votre navigateur ne supporte pas la lecture de vidéo.
-    </video>
+    <iframe width="560" height="315" 
+    src="https://www.youtube.com/embed/2vdOi47jpRs" 
+    title="Vidéo portfolio Baptiste" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen>
+</iframe>
   </div>
 </section>
 
