mise à jour - index finish

--- a/index.html
+++ b/index.html
@@ -67,30 +67,60 @@
     </p>
   </section>
 
-  <section id="projets-perso">
-    <h3>Quelques projets réalisés</h3>
-    <p>
-      🔗 <strong>Portfolio complet :</strong> 
-      <a href="https://github.com/aKaRagnarAuCollierRouge/Portfolio-Projets-Data" target="_blank">
-        Voir sur GitHub
-      </a>
-    </p>
-    <ul>
-      <li><strong>Étude de marché sur le secteur avicole</strong> (2025)<br>
-        Analyse pour l'implantation d’une entreprise de production de poulet biologique.
-      </li>
-      <li><strong>Analyse des ventes d’une librairie e-commerce</strong> (2025)<br>
-        Étude des indicateurs de performance et analyse comportementale des clients en ligne.
-      </li>
-      <li><strong>Optimisation de la gestion des stocks et des ventes – secteur vinicole</strong> (2025)</li>
-      <li><strong>Tableau de bord de suivi de projets d’entreprise – Power BI</strong> (2025)<br>
-        Suivi des coûts, détection des retards et pilotage de la performance projet, avec vues adaptées aux directeurs généraux, régionaux et chefs de projet.
-      </li>
-      <li><strong>Détection de faux billets par Machine Learning – Python</strong> (2025)<br>
-        Comparaison de quatre modèles (régression logistique, K-means, KNN, random forest) sur des données géométriques, analyse des performances et optimisation.
-      </li>
-    </ul>
-  </section>
+<section id="projets-perso">
+  <h3>Quelques projets réalisés</h3>
+  <p>
+    🔗 <strong>Portfolio complet :</strong>
+    <a href="https://github.com/aKaRagnarAuCollierRouge/Portfolio-Projets-Data" target="_blank">
+      Voir sur GitHub
+    </a>
+  </p>
+
+  <ul>
+    <li>
+      <strong>🔍 Analyse stratégique pour l’expansion à l’international – secteur avicole biologique</strong> (2025) – <em>Python, scikit-learn</em><br>
+      Analyse de marché pour une entreprise agroalimentaire française souhaitant exporter ses produits.<br>
+      Collecte et nettoyage de données (FAO, Banque mondiale, open data), réduction de dimension par ACP, clustering (CAH et K-means) pour segmenter les pays cibles.<br>
+      Objectif : identifier les zones prioritaires pour l’exportation de poulets biologiques.
+    </li>
+
+    <li>
+      <strong>📚 Analyse des ventes et comportement client – Librairie e-commerce</strong> (2025) – <em>Python</em><br>
+      Étude complète des performances commerciales et du comportement d’achat (en ligne et en magasin).<br>
+      Création d’indicateurs clés, segmentation des clients, analyse de la fidélité et recommandations stratégiques (offres, pricing, ciblage).<br>
+      Rapport final destiné au comité de direction pour éclairer les décisions commerciales.
+    </li>
+
+    <li>
+      <strong>🍷 Optimisation des ventes et de la gestion des stocks – secteur vinicole</strong> (2025) – <em>Python</em><br>
+      Nettoyage des données, création d’un dictionnaire de données, exploration des ventes et analyse des stocks.<br>
+      Recommandations pour améliorer la rotation des produits, limiter les ruptures de stock et optimiser les volumes d’achat.<br>
+      Objectif : augmenter les marges et réduire les pertes.
+    </li>
+
+    <li>
+      <strong>📊 Tableau de bord de suivi de projets – Power BI</strong> (2025) – <em>Power BI</em><br>
+      Conception d’un dashboard interactif pour suivre la performance de projets en entreprise.<br>
+      Indicateurs clés : coûts, délais, livrables, alertes en cas de déviation &gt;15 %. <br>
+      Vues personnalisées selon le profil utilisateur : direction générale, direction régionale, chefs de projet.
+    </li>
+
+    <li>
+      <strong>🧠 Détection de faux billets – Machine Learning</strong> (2025) – <em>Python, scikit-learn</em><br>
+      Développement d’une application d’IA pour prédire la validité de billets en euros.<br>
+      Modèles comparés : régression logistique, K-means, KNN, Random Forest.<br>
+      Analyse des performances via matrice de confusion, optimisation et visualisation des résultats.
+    </li>
+
+    <li>
+      <strong>💧 Story interactive – Accès à l’eau potable</strong> (2025) – <em>Tableau</em><br>
+      Création d’une Story Tableau pour prioriser les interventions dans les pays à accès limité à l’eau potable.<br>
+      Sélection d’indicateurs (stabilité politique, infrastructures, mortalité infantile...), création de trois vues stratégiques (monde, continent, pays).<br>
+      Visualisation intuitive et documentée avec démonstration interactive.
+    </li>
+  </ul>
+</section>
+
 </section>
 
 
@@ -248,7 +278,7 @@
   </table>
 </section>
 
-<section id="carte-mentale" style="padding: 2rem; font-family: Arial, sans-serif; text-align: center;">
+<section id="carte-mentale" style="padding: 2rem; font-family: Arial, sans-serif;">
   <h3>🧠 Carte mentale – <a href="https://github.com/aKaRagnarAuCollierRouge/Portfolio-Aeroworld/tree/main/4.%20Carte%20mentale%20-%20vue%20d'ensemble%20du%20projet" target="_blank">
       Voir sur mon GitHub
     </a></h3>
@@ -256,7 +286,7 @@
     J’ai réalisé cette carte mentale afin d’avoir une vue d’ensemble claire du projet et du portfolio à créer.  
     Elle m’a permis d’organiser efficacement mon travail et de structurer les différentes étapes clés.
   </p>
-  <img src="img/carte mentale.PNG" alt="Carte mentale du projet" style="max-width: 70%; height: auto; margin-top: 1rem; border: 1px solid #ddd; border-radius: 8px;"/>
+  <img src="img/carte mentale.PNG" alt="Carte mentale du projet" style="max-width: 100%; height: auto; margin-top: 1rem; border: 1px solid #ddd; border-radius: 8px;"/>
 </section>
 
 <section id="gantt" style="padding: 2rem; font-family: Arial, sans-serif;">
