--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 </main>
 
 <footer>
-  <p>© 2025 Baptiste Trespaillé-Barrau – Portfolio personnel</p>
+  <p>© 2025 Baptiste Trespaillé-Barrau – Portfolio </p>
 </footer>
 
 </body>
