--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@
   </p>
 
     <section id="contexte-projet">
-      <h3>🚀 Contexte du Projet – Aéroworld</h3>
+      <h3>🚀 Aéroworld</h3>
       <p>
-        Aéroworld, entreprise internationale, a exprimé le besoin de disposer d’un <strong>outil de pilotage stratégique</strong> pour suivre l’ensemble de ses projets IT et Marketing.
-        L'objectif est de permettre à chaque niveau de direction (mondiale, régionale, nationale) de <strong>visualiser les performances</strong>, <strong>détecter les écarts critiques</strong>, et <strong>prendre des décisions rapides</strong>.
+        Aéroworld est une entreprise internationale du secteur aéronautique qui fait face à des enjeux complexes de gestion et d’exploitation des données afin d’optimiser la conception des avions, la performance opérationnelle et la sécurité des vols.
       </p>
     </section>
 
